--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
 
 <body>
     <!-- Navbar -->
-    <div class="center">
-        <img class="col-m-12" src="./image/mplus-logo2018.png">
+    <div>
+        <div class="center">
+            <img class="col-m-12 col-6 Lfloatleft" src="./image/mplus-logo2018.png">
+        </div>
+        <div class="center col-6 Lfloatright navbtn">
+            <a class="col-m-4" href="#projects" class="w3-bar-item w3-button">神秘抽抽樂</a>
+            <a class="col-m-4" href="#about" class="w3-bar-item w3-button">好康抽大獎</a>
+            <a class="col-m-4" href="#contact" class="w3-bar-item w3-button">一對一付款說明頁</a>
+        </div>
     </div>
     <div class="center">
-        <a class="col-m-4" href="#projects" class="w3-bar-item w3-button">神秘抽抽樂</a>
-        <a class="col-m-4" href="#about" class="w3-bar-item w3-button">好康抽大獎</a>
-        <a class="col-m-4" href="#contact" class="w3-bar-item w3-button">一對一付款說明頁</a>
-    </div>
-
-    <div class="mainImage">
         <img src="./image/payment_main.jpg">
     </div>
 
@@ -25,20 +26,22 @@
         <div class="title col-m-8">好康抽大獎好康抽大獎好康抽大獎好康抽大獎</div>
     </div>
 
-    <div class="center">
-        <img src="./image/payment_event1_02.png">
-        <form action="/action_page.php">
-            手機序號: <input type="text"><input type="submit" value="Submit">
-        </form>
-    </div>
+    <div class="col-m-12" style="display: inline-block;">
+        <div class="center col-6 Lfloatleft">
+            <img src="./image/payment_event1_02.png">
+            <form action="/action_page.php">
+                手機序號: <input type="text"><input type="submit" value="Submit">
+            </form>
+        </div>
 
-    <div class="col-m-12 center">
-        <p><span class="span1">注意事項</span></p>
-        <p>邊緣人無法參加邊緣人無法參加邊緣人無法參加邊緣人無法參加</p>
-    </div>
-    <div class="col-m-12 center">
-        <p><span class="span1">兌獎辦法</span></p>
-        <p>邊緣人無法參加邊緣人無法參加邊緣人無法參加邊緣人無法參加邊緣人無法參加</p>
+        <div class="center col-4 Lfloatright detail">
+            <p><span class="span1">注意事項</span></p>
+            <p>邊緣人無法參加邊緣人無法參加邊緣人無法參加邊緣人無法參加</p>
+        </div>
+        <div class="center col-4 Lfloatright detail">
+            <p><span class="span1">兌獎辦法</span></p>
+            <p>邊緣人無法參加邊緣人無法參加邊緣人無法參加邊緣人無法參加邊緣人無法參加</p>
+        </div>
     </div>
 
     <div class="banner col-m-12">
@@ -46,8 +49,8 @@
         <div class="title col-m-8">好康抽大獎好康抽大獎好康抽大獎好康抽大獎</div>
     </div>
 
-    <div>
-        <div class="col-m-12 center">
+    <div class="col-m-12" style="display: inline-block;">
+        <div class="center col-6 Lfloatleft">
             <dl>
                 <dt>品項A</dt>
                 <dd><img src="./image/payment_event2_02.png"></dd>
@@ -57,11 +60,11 @@
                 <dd><img src="./image/payment_event2_04.png"></dd>
             </dl>
         </div>
-        <div class="col-m-12 center">
+        <div class="center col-4 Lfloatright detail">
             <p><span class="span1">注意事項</span></p>
             <p>邊緣人無法參加邊緣人無法參加邊緣人無法參加邊緣人無法參加</p>
         </div>
-        <div class="col-m-12 center">
+        <div class="center col-4 Lfloatright detail">
             <p><span class="span1">兌獎辦法</span></p>
             <p>邊緣人無法參加邊緣人無法參加邊緣人無法參加邊緣人無法參加邊緣人無法參加</p>
         </div>
