--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Navbar -->
     <div>
         <div class="center">
-            <img class="col-m-12 col-6 Lfloatleft" src="./image/mplus-logo2018.png">
+            <img class="col-m-12 col-6 Lfloatleft" src="./image/googlelogo_color_272x92dp.png">
         </div>
         <div class="center col-6 Lfloatright navbtn">
             <a class="col-m-4" href="#projects" class="w3-bar-item w3-button">神秘抽抽樂</a>
@@ -18,7 +18,7 @@
         </div>
     </div>
     <div class="center">
-        <img src="./image/payment_main.jpg">
+        <img src="./image/canvas.png">
     </div>
 
     <div class="banner col-m-12">
